src/objects/Book__c.object
<CustomObject>
    <description>Maintains data about different books</description>
    <fields>
        <fullName>Book_Position__c</fullName>
        <description>Where the book is located?</description>
        <inlineHelpText>Where the book is located?</inlineHelpText>
        <label>Book Position</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_copies__c</fullName>
        <description>Number of copies for particular book</description>
        <inlineHelpText>Number of copies for particular book</inlineHelpText>
        <label>Number of copies</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>book_id__c</fullName>
        <defaultValue>0</defaultValue>
        <description>unique book id</description>
        <inlineHelpText>This field is auto-generated(book_id)</inlineHelpText>
        <label>book_id</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>book_name__c</fullName>
        <defaultValue>null</defaultValue>
        <description>Write the book name here</description>
        <inlineHelpText>Helps to retrieve the book name</inlineHelpText>
        <label>book_name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Book</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>